--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "next": "^11.1.0"
+    "next": "^11.1.0",
+    "React": "^17.0.2"
   }
 }
