--- a/travel-details/package.json
+++ b/travel-details/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@types/react": "^17.0.18",
     "next": "11.1.0",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.38.0"
   },
   "devDependencies": {
-    "react": "17.0.18",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
+    "react": "17.0.18",
     "typescript": "4.3.5"
   }
 }
