--- a/travel-details/package.json
+++ b/travel-details/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@types/react": "^17.0.18",
+    "date-fns": "^2.23.0",
     "gray-matter": "^4.0.3",
     "next": "11.1.0",
     "react-dom": "17.0.2",
+    "remark": "13",
+    "remark-html": "13",
     "sass": "^1.38.0"
   },
   "devDependencies": {
