--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "React": "^17.0.2",
+    "date-fns": "^2.23.0",
     "gray-matter": "^4.0.3",
-    "next": "^11.1.0"
+    "next": "^11.1.0",
+    "remark": "^14.0.1",
+    "remark-html": "^14.0.0"
   }
 }
