--- a/travel-details/tsconfig.json
+++ b/travel-details/tsconfig.json
@@ -8,7 +8,7 @@
     ],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": true,
+    "strict": false,
     "noImplicitAny": false,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
@@ -25,6 +25,6 @@
     "**/*.tsx"
   ],
   "exclude": [
-    "node_modules/**"
+    "node_modules/**",
   ]
 }
